--- a/index.html
+++ b/index.html
@@ -365,9 +365,11 @@
 <th>描述</th>
 </tr>
 </thead><tbody>
+<tr>
+<td>music_id</td>
+<td>音乐的唯一id</td>
+</tr>
 </tbody></table>
-
-<p>music_id   音乐的唯一id</p>
 <h3 id='json-3'>回传JSON属性</h3>
 <table><thead>
 <tr>
@@ -430,9 +432,11 @@
 <th>描述</th>
 </tr>
 </thead><tbody>
+<tr>
+<td>music_id</td>
+<td>音乐的唯一id</td>
+</tr>
 </tbody></table>
-
-<p>music_id   音乐的唯一id</p>
 
 <aside class="notice">
 也可直接使用音乐状态查询中的下载链接.
